fix dark mode card color

--- a/src/css/globals/colors.css
+++ b/src/css/globals/colors.css
@@ -22,4 +22,6 @@ body.dark_mode {
   --color-accent: #62b662;
   --color-danger: #e34e4e;
   --color-info: #2f72ee;
+  --color-success: #0b580b;
+
 }
